serialization env fixes