@@ -22,6 +22,17 @@ cordapp {
 
 }
 
+task mocknetworkTest(type: Test) {
+    environment "CORDA_VARIATION_VERSION", "$corda_variation_version"
+    maxParallelForks = 1
+    jvmArgs "-Xmx2048m", "-XX:MaxPermSize=2048m"
+    testLogging.showStandardStreams = true
+    testLogging.exceptionFormat = 'full'
+    useJUnitPlatform {
+        include '**/mocknetwork/**/*Test.class'
+    }
+}
+
 task nodedriverTest(type: Test) {
     environment "CORDA_VARIATION_VERSION", "$corda_variation_version"
     maxParallelForks = 1
@@ -53,6 +64,7 @@ dependencies {
     cordaCompile "$corda_release_group:corda-rpc:$corda_release_version"
     cordaRuntime "$corda_release_group:corda:$corda_release_version"
 
+    testCompile(project(":corda-testacles-mocknetwork"))
     testCompile(project(":corda-testacles-nodedriver"))
     testCompile(project(":corda-testacles-testcontainers"))
     //compile("com.github.manosbatsis.corda.rpc.poolboy:corda-rpc-poolboy:$poolboy_version")
